@@ -1,3 +1,8 @@
+2006-04-15  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* utimens.c (futimens): glibc futimesat messes up if /proc
+	isn't mounted.  Problem reported by Kir Kolyshkin.
+
 2006-04-14  Jim Meyering  <jim@meyering.net>
 
 	Remove unreachable code and plug leaks in code that handles degenerate
